--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-bestsellersUrl=https://api.nytimes.com/svc/books/v3/lists.json
+bestsellersUrl=null
 apikey=null
 specialization=${SPECIALIZATION:Education}
